Merge changes to allow submission of surveys